# NeuralVault-Agentic-3D-Knowledge-Graph

./: .gitignore  ARCHITECTURE_README.md  ARCHITECTURE_README_BACKUP_V.01.md  ARCHITETTURA.md  Architecture question.md  BUG_QUEUE.MD  NEURAL_CHALLENGE.txt  README.md  REQUIREMENTS_FULL.txt  ROADMAP.md  ROADMAP_SOVEREIGN_EVOLUTION.md  __init__.py  agent007_blueprint.py  agent007_intelligence.py  agent007_lab.py  api.py  check_divs.py  check_models.py  check_vault.py  dashboard.py  deploy.sh  get_ollama_version.py  get_ollama_version_std.py  main.py  memory_consolidation.py  memory_decay.py  memory_tiers.py  neural_lab.py  pyproject.toml  quickstart.py  requirements.txt  stress_test_v0_5.py  test_aegis.py  v0_4_validation.py  v0_5_validation.py  v0_6_validation.py  vault_sdk.py  vault_watcher.py
agent/: active_learning.py  feedback.py  query_planner.py  session.py
aura-extension/: background.js  manifest.json  popup.html  popup.js
bench_py/: agent007.db.wal
benchmarks/: concurrency_race.py  engine_check.tmp  master_audit.py  rust_vs_python.py  simulation_evolution.py  soak_integrity.py  sweep_zoom_latency.py  unit_tests.py
cluster/: executor.py  gossip.py  router.py  shard.py
dashboard/: index.html
evolution/: actuator.py
graph/: entropy.py  gnn_layer.py  graph.py  ingester.py  joint_space.py
index/: cognitive.py  healing.py  hnsw.py  innovations.py  lod.py  matryoshka.py  node.py  sharding.py  sparse.py  turboquant.py
network/: consensus.py  discovery.py  git_evolution.py  (+2 more)
neuralvault_rs/: Cargo.toml  pyproject.toml
neuralvault_rs/src/: distance.rs  hnsw_core.rs  lib.rs  turboquant.rs
(+65 files in other folders)
