[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "neuralvault_rs"
version = "0.1.0"
description = "High-performance vector retrieval core for NeuralVault engine"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "neuralvault_rs"
